syntax = "proto3";

option csharp_namespace = "Server.protos";

message ReplicationFactor {

}